# Lumilio-Photos

./: .gitattributes  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  assets.lock.json  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.e2e.ci.yml  docker-compose.e2e.yml  docker-compose.host-mdns.yml  docker-compose.prod-test.yml  docker-compose.prod.yml  docker-compose.release.dbport.yml  docker-compose.release.yml  docker-compose.yml  go.work.sum  lumilio-run.sh  package.json  protogen.sh  vercel.json
ml/lumen-clip/: README.md  pyproject.toml
ml/lumen-clip/Dockerfiles/cuda/: Dockerfile
ml/lumen-clip/src/: server.py
ml/lumen-clip/src/biological_atlas/: __init__.py  bioclip_model.py  bioclip_service.py
ml/lumen-clip/src/image_classification/: __init__.py  clip_model.py  clip_service.py
ml/lumen-clip/src/proto/: ml_service_pb2.py  ml_service_pb2.pyi  ml_service_pb2_grpc.py
ml/lumen-clip/src/service_registry/: __init__.py  service.py
ml/lumen-clip/src/unified_service/: service.py
pml/: Dockerfile  Dockerfile.cuda  Dockerfile.gpu  Dockerfile.rocm  README.md  app.py  gbif_tree.json  minimal_client.py  ml_service.proto  pyproject.toml  requirements-base.txt  requirements-cpu.txt  requirements-gpu.txt  requirements-osx.txt  requirements.txt  server.py
pml/image_classification/: clip_model.py  clip_service.py
pml/legacy/: app.py
pml/proto/: ml_service.proto  ml_service_pb2.py  ml_service_pb2.pyi  ml_service_pb2_grpc.py
pml/src/biological_atlas/: __init__.py  bioclip_model.py  bioclip_service.py
pml/src/biological_atlas/scripts/: classify_image.py
pml/src/image_classification/: __init__.py  clip_model.py  clip_service.py
pml/src/pml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pml/src/proto/: ml_service.proto  ml_service_pb2.py  ml_service_pb2.pyi  ml_service_pb2_grpc.py
pml/src/proto/rkphoto-manager/server/proto/: ml_service.pb.go
pml/src/utils/: logging_config.py
server/internal/agent/research/: BENCHMARK_PROBLEM_STATEMENT.md  CHECKPOINT.md  COURSE_PAPER_DRAFT.md  DATA_CONSTRUCTION_PROTOCOL.md  DECODER_EMBEDDING_READING_NOTE.md  EPISODIC_MEMORY_FIELD_MAPPING.md  EXPERIMENT_DESIGN_PRECISE_AND_REDUCED_SLOT.md  INFONCE_EMBEDDING_PAPERS_NOTE.md  PAPER_MAP_FOR_BENCHMARK_PROBLEMS.md  QWEN3_INFONCE_LORA_NOTEBOOK.md  README.md  SEMANTIC_RETRIEVAL_SYSTEM_DESIGN.md  STRICT_RETRIEVAL_REVIEW.md  V7_RESULTS_AND_DISCUSSION_DRAFT.md  eme_lora.ipynb  pyproject.toml
server/internal/agent/research/data/cache/: mab_episode_query_rewrite_cache.jsonl  mab_episode_writer_cache.jsonl  mab_semantic_writer_cache.jsonl
server/internal/agent/research/data/raw/: baseline-smoke.bundle.json  baseline-v1.bundle.json  baseline-v2.bundle.json  baseline-v3.bundle.json  baseline-v4.bundle.json  baseline-v5.bundle.json  baseline-v6.bundle.json  baseline-v7.bundle.json  baseline-v8.bundle.json  smoke.bundle.json
server/internal/agent/research/data/reports/: bge-m3-baseline-v7-semantic.json  bge-m3-baseline-v8-semantic.json  embeddinggemma-baseline-v7-semantic.json  embeddinggemma-baseline-v8-semantic.json  granite-baseline-v1.json  granite-baseline-v2.json  granite-baseline-v3.json  granite-baseline-v4.json  granite-baseline-v6-large-semantic.json  granite-baseline-v6-semantic.json  granite-baseline-v6.json  granite-baseline-v7-semantic.json  granite-baseline-v8-semantic.json  mab-ar-ruler-qa1-qwen3-lora-episode-semantic-20q.json  mab-ar-smoke-qwen3-lora-episode-openrouter.json  mab-ar-smoke-qwen3-lora.json  qwen3-baseline-smoke.json  qwen3-baseline-v1.json  qwen3-baseline-v2.json  qwen3-baseline-v3.json  qwen3-baseline-v4.json  qwen3-baseline-v6-large-semantic.json  qwen3-baseline-v6-semantic.json  qwen3-baseline-v6.json  qwen3-baseline-v7-semantic.json  qwen3-baseline-v8-semantic.json  qwen3-lora-baseline-v8-semantic.json  v7-comparison-analysis.json  v7-comparison-analysis.md  v7-four-model-comparison.md  v8-four-model-comparison.md
server/internal/agent/research/models/qwen3-episodic-lora/: README.md  (+1 more)
server/internal/agent/research/scripts/: memoryagentbench_langgraph_ar.py  qwen3_lora_embed_server.py
wasm/export-wasm/: Cargo.toml
wasm/export-wasm/src/: lib.rs
wasm/studio-wasm/: Cargo.toml
wasm/studio-wasm/src/: lib.rs
(+2796 files in other folders)
