[package]
name = "export-wasm"
version = "0.1.0"
authors = ["EdwinZhan <ed_zhan@outlook.com>"]
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.77"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
    "bmp",
    "tiff",
] }
imageproc = { version = "0.25.0", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageData",
    "Window",
    "Blob",
    "BlobPropertyBag",
    "FileReader",
    "File",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link-time optimization
lto = true
# Enable more aggressive optimizations
codegen-units = 1
# Remove debug info to reduce size
debug = false
# Panic on overflow in release mode
overflow-checks = false
